fix: update z-index to correspond to design specifications for coach-mark

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -32,7 +32,7 @@
 	}
 	&__content-container {
 		padding: 0 0 20px 20px;
-		z-index: 920;
+		z-index: 1200;
 		margin: 10px;
 		background-color: $pe-color-digital-ice-blue;
 		border-radius: 4px;
